k8s/cloudl-client-deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudl-client-deployment
  namespace: cloudl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudl-client
    spec:
      containers:
        - name: cloudl-client
          image: 888507318922.dkr.ecr.eu-north-1.amazonaws.com/cloudl/cloudl:frontendv1-eb9fc032feec8ead159234da36062f975e4c1bc6
          ports:
            - containerPort: 80
              name: http-port
  selector:
    matchLabels:
      app: cloudl-client
---
apiVersion: v1
kind: Service
metadata:
  name: cloudl-client-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
      nodePort: 30007
  selector:
    app: cloudl-client
  type: NodePort
