k8s/cloudl-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudl-server-deployment
  namespace: cloudl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudl-server
  template:
    metadata:
      labels:
        app: cloudl-server
    spec:
      containers:
        - name: cloudl-server
          image: ${IMAGE_BACKEND}
          ports:
            - containerPort: 5000
              name: nodejs-port
      imagePullSecrets:
        - name: ecr-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: cloudl-server-service
  namespace: cloudl
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: cloudl-server
