k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudl-ingress
  namespace: cloudl
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudl-server-service
                port: { number: 5000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudl-client-service
                port: { number: 80 }
